<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PublisherActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/guideV1"
            app:layout_constraintEnd_toStartOf="@id/guideV2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/publisherTitle"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_account_circle_24"
                app:tint="@color/primary" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_exit_to_app_24"
                app:tint="@color/primary" />
        </LinearLayout>

        <TextView
            android:id="@+id/publisherTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/publisher_title"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/guideV1"
            app:layout_constraintEnd_toStartOf="@id/guideV2"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:textStyle="bold"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/publisherRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/publisherTitle"
            app:layout_constraintStart_toEndOf="@id/guideV1"
            app:layout_constraintEnd_toStartOf="@id/guideV2"
            app:layout_constraintBottom_toTopOf="@id/logoutBtn"/>

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintTop_toBottomOf="@+id/publisherRecyclerView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideV1"
            app:layout_constraintEnd_toStartOf="@id/guideV2"
            android:layout_marginTop="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>